# RR-source

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile-alt  README.md  changelog.txt  readme_source.txt  todo.tsk
client/: CMakeLists.txt
enet/: Makefile  config.status  configure.lineno  enet.vcxproj.filters  libenet.la  libenet.pc  libtool
enet/.libs/: libenet.lai
enet/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
engine/: 3dgui.cpp  aa.cpp  animmodel.h  blend.cpp  blob.cpp  command.cpp  console.cpp  decal.cpp  engine.h  explosion.h  glare.cpp  grass.cpp  iqm.h  irc.cpp  irc.h  joystick.h  lensflare.h  light.cpp  light.h  lightning.h  lua.cpp  lua.h  main.cpp  masterserver.cpp  material.cpp  md2.h  md3.h  md5.h  menus.cpp  obj.h  octaedit.cpp  pvs.cpp  rendergl.cpp  renderlights.cpp  rendermodel.cpp  renderparticles.cpp  rendersky.cpp  rendertext.cpp  renderva.cpp  server.cpp  (+9 more)
fpsgame/: ai.cpp  ai.h  aiman.h  campaign.cpp  campaign.h  capture.h  client.cpp  collect.h  ctf.h  entities.cpp  fps.cpp  game.h  infection.h  messageSystem.cpp  messageSystem.h  messages.cpp  messages.h  monster.cpp  movable.cpp  render.cpp  scoreboard.cpp  server.cpp  survival.h  waypoint.cpp  weapon.cpp
include/Python/: pyconfig.h
include/mysql/: my_config.h  mysql_version.h
lib/: curl.lib  mysqlpp.lib
libraries/luvit/: CMakeLists.txt
libraries/luvit/src/: luv.c  luv.h  luv_dns.c  luv_dns.h  luv_fs.c  luv_fs.h  luv_misc.c  luv_portability.h  luvit_init.c  luvit_init.h  utils.c  utils.h
pycontrol/: pyserver.cpp  sbpy.cpp  server.h  servermodule.cpp
rpggame/: rpg.depend  rpg.layout
rpggame/.objs/client32/vcpp/: mingw.res
server/: CMakeLists.txt  autoversion.pl  core_bindings.cpp  cube.vcxproj  extserver.cpp  main.cpp  server.h  version.h
shared/: command.h  cube.h  ents.h  geom.h  iengine.h  log.h  stream.cpp  tools.cpp  tools.h  version.h  zip.cpp
updater/: cube.h  cube.vcxproj  main.cpp  stream.cpp  temp.h  tools.h  version.h  zip.cpp
vcpp/: UpgradeLog.XML  XRRS.vcxproj  XRRS.vcxproj.filters  autoversion.pl  config.cfg  cube.vcproj  cube.vcxproj  cube.vcxproj.filters  init.cfg  installer.nsi  master.vcxproj  master.vcxproj.filters  mingw.res  patcher.nsi  resource.h  restore.cfg  rpg.depend  sauerbraten.aps  sauerbraten.cbp  sauerbraten.depend  sauerbraten.layout  sauerbraten1.rc  sauerbraten_rr.sln  servers.cfg  tesseract.cbp  tesseract.depend  tesseract.layout  tesseract.opensdf  tesseract.vcxproj  updater.vcxproj  updater.vcxproj.filters
vcpp/.objs/client32/vcpp/: mingw.res
vcpp/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  tesseract.lastbuildstate  tesseract.res
xcode/tesseract.xcodeproj/: project.pbxproj
